--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
 	<modules>
+		<module>challenge-service</module>
 		<module>fish-service</module>
 	</modules>
 	<parent>
