--- a/fish-service/Dockerfile
+++ b/fish-service/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:18-jdk-alpine
-COPY target/challenge-service-*.jar /challenge-service.jar
-ENTRYPOINT exec java $JAVA_OPTS -jar /challenge-service.jar $SPRING_PROPERTY_OVERRIDE
+COPY target/fish-service-*.jar /fish-service.jar
+ENTRYPOINT exec java $JAVA_OPTS -jar /fish-service.jar $SPRING_PROPERTY_OVERRIDE
